chore: Update demonstration jupyter file

--- a/notebooks/demonstration_of_model.ipynb
+++ b/notebooks/demonstration_of_model.ipynb
@@ -26,10 +26,10 @@
     }
    ],
    "source": [
-    "import os\n",
     "from pathlib import Path\n",
-    "\n",
-    "from src.inference import batch_predict, interactive_predict, load_model_and_data\n",
+    "import os\n",
+    "import torch\n",
+    "from src.inference import load_model_and_data, batch_predict, interactive_predict\n",
     "from src.utils.device import setup_device"
    ]
   },
@@ -45,16 +45,16 @@
      "text": [
       "/home/nur/.cache/pypoetry/virtualenvs/ml-hw3-6sem-gCt_yKT6-py3.12/lib/python3.12/site-packages/gensim/models/keyedvectors.py:551: UserWarning: Adding single vectors to a KeyedVectors which grows by one each time can be costly. Consider adding in batches or preallocating to the required size.\n",
       "  warnings.warn(\n",
-      "Creating datasets: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 74278/74278 [00:14<00:00, 5176.49it/s]\n",
-      "2025-05-25 20:58:29,608 - prepare_data - INFO - Train size = 63136\n",
-      "2025-05-25 20:58:29,609 - prepare_data - INFO - Test size = 11142\n",
-      "2025-05-25 20:58:30,037 - prepare_data - INFO - Vocab size = 500004\n"
+      "Creating datasets: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 74278/74278 [00:14<00:00, 5041.28it/s]\n",
+      "2025-05-25 22:01:21,407 - prepare_data - INFO - Train size = 63136\n",
+      "2025-05-25 22:01:21,408 - prepare_data - INFO - Test size = 11142\n",
+      "2025-05-25 22:01:21,869 - prepare_data - INFO - Vocab size = 500004\n"
      ]
     }
    ],
    "source": [
     "DEVICE = setup_device()\n",
-    "MODEL_PATH = str(Path(os.getcwd()).parent / \"model/model-30_epochs-without_unk_and_punctuation.pt\")\n",
+    "MODEL_PATH = str(Path(os.getcwd()).parent / \"model/model-30_epochs-without_unk_and_punctuation_all_data.pt\")\n",
     "EMBEDDING_PATH = str(Path(os.getcwd()).parent / \"embeddings/navec_hudlit_v1_12B_500K_300d_100q.tar\")\n",
     "DATA_PATH = str(Path(os.getcwd()).parent / \"data/raw/news.csv\")\n",
     "\n",
@@ -79,43 +79,43 @@
       "\n",
       "--- Example 1 ---\n",
       "Input: Пластик произвел революцию в пищевой упаковке\n",
-      "Prediction: в москве открылся памятник советским солдатам\n",
+      "Prediction: <unk> сша снизил цены на нефть\n",
       "\n",
       "--- Example 2 ---\n",
       "Input: Ученые обнаружили микрочастицы пластика в чайных пакетиках\n",
-      "Prediction: в москве побит температурный рекорд по резиновым квартирам\n",
+      "Prediction: индекс nasdaq вырос на <unk>\n",
       "\n",
       "--- Example 3 ---\n",
       "Input: Новые исследования показывают опасность нанопластика\n",
-      "Prediction: в москве пройдет фестиваль <unk>\n",
+      "Prediction: в сети появился трейлер нового ледникового периода <unk>\n",
       "\n",
       "--- Example 4 ---\n",
       "Input: В Москве сегодня хорошая погода, светит солнце и температура около 25 градусов.\n",
-      "Prediction: в москве открылся памятник советским солдатам\n",
+      "Prediction: в москве нашли <unk> <unk>\n",
       "\n",
       "--- Example 5 ---\n",
       "Input: Книга рассказывает о приключениях молодого волшебника в школе магии.\n",
-      "Prediction: в москве задержаны <unk> <unk>\n",
+      "Prediction: в сети появился трейлер нового ледникового периода <unk>\n",
       "\n",
       "--- Example 6 ---\n",
       "Input: Президент объявил о новых экономических реформах для поддержки малого бизнеса.\n",
-      "Prediction: <unk> россии по футболу стартовал к <unk>\n",
+      "Prediction: в сети появился трейлер нового ледникового периода <unk>\n",
       "\n",
       "--- Example 7 ---\n",
       "Input: Команда выиграла чемпионат, показав отличную игру на протяжении всего сезона.\n",
-      "Prediction: <unk> вышла в полуфинал турнира в шанхае\n",
+      "Prediction: <unk> не нашел выступление на <unk>\n",
       "\n",
       "--- Example 8 ---\n",
       "Input: Концерт привлек тысячи зрителей и стал одним из самых ярких событий года.\n",
-      "Prediction: в москве пройдет фестиваль <unk>\n",
+      "Prediction: в москве пройдет выставка современного искусства\n",
       "\n",
       "--- Example 9 ---\n",
       "Input: Ученые разрабатывают новые методы лечения рака, основанные на последних достижениях в генетике.\n",
-      "Prediction: в москве открылся памятник советским солдатам\n",
+      "Prediction: в сети появился трейлер нового ледникового периода <unk>\n",
       "\n",
       "--- Example 10 ---\n",
       "Input: Компания представила новую модель смартфона с улучшенными характеристиками и функциями.\n",
-      "Prediction: <unk> россии по футболу перенес кулинарный <unk>\n",
+      "Prediction: <unk> не нашел выступление на <unk>\n",
       "\n",
       "Predictions saved to predictions.json\n"
      ]
@@ -132,7 +132,7 @@
     "    \"Команда выиграла чемпионат, показав отличную игру на протяжении всего сезона.\",\n",
     "    \"Концерт привлек тысячи зрителей и стал одним из самых ярких событий года.\",\n",
     "    \"Ученые разрабатывают новые методы лечения рака, основанные на последних достижениях в генетике.\",\n",
-    "    \"Компания представила новую модель смартфона с улучшенными характеристиками и функциями.\",\n",
+    "    \"Компания представила новую модель смартфона с улучшенными характеристиками и функциями.\"\n",
     "]\n",
     "\n",
     "if model and data:\n",
