feat: Totally fix and add attention demonstration

--- a/notebooks/demonstration_of_model.ipynb
+++ b/notebooks/demonstration_of_model.ipynb
@@ -26,10 +26,10 @@
     }
    ],
    "source": [
-    "from pathlib import Path\n",
     "import os\n",
-    "import torch\n",
-    "from src.inference import load_model_and_data, batch_predict, interactive_predict\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from src.inference import batch_predict, interactive_predict, load_model_and_data\n",
     "from src.utils.device import setup_device"
    ]
   },
@@ -132,7 +132,7 @@
     "    \"Команда выиграла чемпионат, показав отличную игру на протяжении всего сезона.\",\n",
     "    \"Концерт привлек тысячи зрителей и стал одним из самых ярких событий года.\",\n",
     "    \"Ученые разрабатывают новые методы лечения рака, основанные на последних достижениях в генетике.\",\n",
-    "    \"Компания представила новую модель смартфона с улучшенными характеристиками и функциями.\"\n",
+    "    \"Компания представила новую модель смартфона с улучшенными характеристиками и функциями.\",\n",
     "]\n",
     "\n",
     "if model and data:\n",
@@ -230,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
